Bug 478443 - Maximized state not remembered across launches
Summary: Maximized state not remembered across launches
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.1.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression, usability, wayland-only
: 487197 490506 491261 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-12 16:33 UTC by Nate Graham
Modified: 2024-11-06 22:01 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma 6.3.0 with Frameworks 6.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-12-12 16:33:09 UTC
Plasma 6 Wayland with everything from git master.

STEPS TO REPRODUCE
1. Be on Wayland
2. Launch System Settings
3. Maximize its window
4. Quit the app
5. Re-launch the app

OBSERVED RESULT
System Settings launches windowed, at the size it had in step 2.

EXPECTED RESULT
System Settings launched maximized.

ADDITIONAL INFORMATION
In step 3, if you resize the window instead of maximizing it, everything works as expected.
Comment 1 waynejwoww 2024-05-11 17:09:14 UTC
Can confirm
Fedora 40, Plasma 6.0.4, wayland
Comment 2 BryanLiang 2024-05-29 15:58:06 UTC
I'm using Arch Linux with KDE Plasma 6.0.5, and I can confirm this issue still exists.
Comment 3 Nate Graham 2024-06-12 13:47:53 UTC
Can also confirm.
Comment 4 Nate Graham 2024-06-13 22:50:45 UTC
Probably more fallout from porting away from Kxmlgui.
Comment 5 BryanLiang 2024-06-21 10:40:25 UTC
Not only systemsettings, filelight cannot remember the maximized state across launches too.
Comment 6 Nate Graham 2024-06-21 17:38:59 UTC
It's a separate issue in each app; please open a new bug report for each app you encounter it in.
Comment 7 Patrick Silva 2024-07-12 12:51:59 UTC
Same on Plasma 6.1.2.

Operating System: Arch Linux 
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Graphics Platform: Wayland
Comment 8 Nate Graham 2024-08-05 17:58:15 UTC
*** Bug 491261 has been marked as a duplicate of this bug. ***
Comment 9 EpicTux123 2024-08-05 18:01:45 UTC
I can confirm this also happens on X11.
Comment 10 John Veness 2024-08-12 15:49:08 UTC
*** Bug 487197 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2024-08-12 18:51:11 UTC
*** Bug 490506 has been marked as a duplicate of this bug. ***
Comment 12 waynejwoww 2024-08-25 22:02:38 UTC
problem still exists in plasma 6.1.4

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.6-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 13 Akseli Lahtinen 2024-09-16 13:29:30 UTC
Can confirm 

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.10.9-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 14 Bug Janitor Service 2024-09-16 14:40:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/328
Comment 15 Akseli Lahtinen 2024-09-17 13:19:21 UTC
Git commit 830dac8c953182e665286055345e4e8f13530f19 by Akseli Lahtinen.
Committed on 17/09/2024 at 13:19.
Pushed by akselmo into branch 'master'.

SettingsBase.cpp: Restore window state and position

Moved setAutoSaveSettings after initApplication, because otherwise
the window we apply the geometry settings from stateConfig wouldnt exist.
FIXED-IN: 6.2.0

M  +2    -2    app/SettingsBase.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/830dac8c953182e665286055345e4e8f13530f19
Comment 16 Akseli Lahtinen 2024-09-17 13:20:51 UTC
Git commit b0cf9563bf1d4c7f599085d70d79636ffe3b11b0 by Akseli Lahtinen.
Committed on 17/09/2024 at 13:19.
Pushed by akselmo into branch 'Plasma/6.2'.

SettingsBase.cpp: Restore window state and position

Moved setAutoSaveSettings after initApplication, because otherwise
the window we apply the geometry settings from stateConfig wouldnt exist.
FIXED-IN: 6.2.0


(cherry picked from commit 830dac8c953182e665286055345e4e8f13530f19)

f22526bd SettingsBase.cpp: Restore window state and position
b770cf77 setAutoSaveSettings after initApplication

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +2    -2    app/SettingsBase.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/b0cf9563bf1d4c7f599085d70d79636ffe3b11b0
Comment 17 Nate Graham 2024-11-06 22:01:27 UTC
Git commit 1cafc0d6347012aa7567d6efeeef0f504f3b8890 by Nate Graham.
Committed on 06/11/2024 at 22:01.
Pushed by ngraham into branch 'master'.

Port to KConfig.WindowStateSaver

Part of https://invent.kde.org/frameworks/kconfig/-/issues/12

Fewer bugs, less custom code to maintain, we get standardized
state saving semantics for free, and the data gets stored in
the state config rather than the settings config.
FIXED-IN: Plasma 6.3.0 with Frameworks 6.9

M  +7    -33   src/Main.qml
M  +0    -3    src/main.cpp
M  +0    -9    src/systemmonitor.kcfg

https://invent.kde.org/plasma/plasma-systemmonitor/-/commit/1cafc0d6347012aa7567d6efeeef0f504f3b8890