SettingsBase.cpp: Restore window state and position

Moved setAutoSaveSettings after initApplication, because otherwise
the window we apply the geometry settings from stateConfig wouldnt exist.

BUG:478443
FIXED-IN: 6.2.0


(cherry picked from commit 830dac8c953182e665286055345e4e8f13530f19)

f22526bd SettingsBase.cpp: Restore window state and position
b770cf77 setAutoSaveSettings after initApplication

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>